# kwin-effect-crt

./: .gitignore  CMakeLists.txt  README.md  build-and-install.sh  kwin-effect-crt.spec  toggle.sh  uninstall.sh
scripts/: test-nested.sh
src/: CMakeLists.txt  Config.kcfgc  Effect.cpp  Effect.h  metadata.json  options.kcfg  plugin.cpp
src/kcm/: CMakeLists.txt  KCM.cpp  KCM.h  metadata.json  plugin.cpp
